samples/_failures_safe/1761598807_a2c610_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1286d09a.c: In function ‘main’:
./samples/SAFE/__tmp_1286d09a.c:146:32: error: ‘decompress_r’ undeclared (first use in this function); did you mean ‘decompressed’?
  146 |     size_t decompressed_size = decompress_r
      |                                ^~~~~~~~~~~~
      |                                decompressed
./samples/SAFE/__tmp_1286d09a.c:146:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1286d09a.c:146:5: error: expected ‘,’ or ‘;’ at end of input
  146 |     size_t decompressed_size = decompress_r
      |     ^~~~~~
./samples/SAFE/__tmp_1286d09a.c:146:5: error: expected declaration or statement at end of input
